# RIFRDFQuery

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  Cargo.toml
src/include/: RIFRDFQuery.h
src/src/: constants.rs  debug.rs  ffi_c.rs  formula_container.rs  lib.rs  rifask.rs  rifquery.rs
test/: CMakeLists.txt  data1.jsonld  mytest.c  tools.cmake
test/data/: data01-premise.ttl  data02-query.ttl  data03-query.ttl  data04-query.ttl  data05-premise.ttl  data06-query.ttl  data07-premise.ttl  data08-query.ttl  data09-premise.ttl  data09-query.ttl  data10-query.ttl  data11-premise.ttl  data12-premise.ttl  data14-query.ttl  data15-query.ttl  data16-premise.ttl  data18-premise.ttl  data18-query.ttl  data19-query.ttl  data21-premise.ttl  data23-premise.ttl  data25-premise.ttl  data26-premise.ttl  data26-query.ttl  manifest.json
